added code to HTML file

--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -4,15 +4,54 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Prework Coding Study Guide</title>
+    <title>Prework Study Guide</title>
   </head>
   <body>
     <header id="top">
-      <h1>Prework Coding Study Guide</h1>
+      <h1>Prework Study Guide</h1>
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
     <main>
-      <!-- Student code goes here -->
+      <section class="card" id="html-section">
+        <h2>HTML</h2>
+        <ul>
+          <li>The head element contains information about the webpage, such as metadata.</li>
+          <li>The body element represents the visible content shown to the user.</li>
+          <li>Metadata examples for head: title, style, base, link, meta, script.</li>
+          <li>p is for your paragraphs, ui for unordered lists, ol for ordered lists, li for list items.  </li>
+          <li>img for images, src (attribute) for defined location of image, alt for explaining the image.</li>
+          <li>br is a line break to create space between two blocks of code.</li>
+          <li>a href=link where a is for an anchor which creates links, href is the url for the link.</li>
+          <li>header appears at the top and usually contains navigational/introductory content.</li>
+          <li>h1 to h6 are headings, to be used in order, where h1 is used once per page, and the others are used after. (Each header gets smaller.)</li>
+        <li>footer at the bottom of the page, contains navigation, copyright, sitemap, contact, etc. In our case we have a note.</li>
+        </ul>
+      </section>
+   
+      <section class="card" id="css-section">
+        <h2>CSS</h2>
+        <ui>
+          <li>wip</li>
+        </ui>
+      </section>
+   
+      <section class="card" id="git-section">
+        <h2>GIT</h2>
+        <ui>
+          <li>Guide to pulling updated main file, branching, updating, comitting, pull request/merge</li>
+          <li>Use git commands in your computers terminal (open with git bash).</li>
+          <li>git status: checks what branch we are currently on</li>
+          <li>git checkout -b branch-name: creates a new branch and switches to it</li>
+          <li> wip </li>
+        </ui>
+      </section>
+   
+      <section class="card" id="javascript-section">
+        <h2>JAVASCRIPT</h2>
+        <ui>
+          <li>wip</li>
+        </ui>
+      </section>
     </main>
 
     <footer>
