Added many more JavaScript stuff!

--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -10,10 +10,10 @@
 
   <body>
     <header id="top">
-      <h1>Prework Study Guide</h1>
-      <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
+      <h1>Prework Frankenstein Guide</h1>
+      <img src="./assets/ghost.png" alt="Profile image of ghost wearing a hood." />
       <h2>
-        ✨Open the Console to See What's Happening✨
+        👻Open the Console to See What's Happening👻
       </h2>
     </header>
 
@@ -39,7 +39,7 @@
    
       <section class="card" id="css-section">
         <h2>CSS</h2>
-        <ui>
+        <ul>
           <li>A margin indicates how much space we want around the outside of an element.</li>
           <li>the most common way to style a webpage is by using an external CSS style sheet. This is preferred in most cases because it allows developers to keep all their CSS rules in a separate file, which makes design changes easier.
             When using an external style sheet, we link the file using a &lt;link&gt; element placed in the HTML's &lt;head&gt;, as shown in the following code:
@@ -56,38 +56,53 @@
           <li>Sometimes, we want to apply a rule to all the elements visible on the page. To do that, we use a special wild card symbol, or *.</li>
           <li>Declarations contain two important components: the CSS property we want to apply and the value of the property. For example, the declaration color: blue; includes the CSS property color and the value for that property, blue.</li>
           <li> <a href="https://developer.mozilla.org/en-US/docs/Learn/CSS" target="_blank">Learn more about CSS styling!</a> </li>
-        </ui>
+        </ul>
       </section>
    
       <section class="card" id="git-section">
         <h2>GIT</h2>
-        <ui>
+        <ul>
           <li>Guide to pulling updated main file, branching, updating, comitting, pull request/merge</li>
           <li>Use git commands in your computers terminal (open with git bash).</li>
           <li>git status: checks what branch we are currently on</li>
           <li>git checkout -b branch-name: creates a new branch and switches to it</li>
-          <li>wip</li>
-        </ui>
+          <li>wip - provide better GIT notes</li>
+          <li>wip - what about the whole ssh key setup and the gitbash/terminal/vs code, that was confusing too... AGH</li>
+        </ul>
       </section>
 
       <section class="card" id="javascript-section">
         <h2>JAVASCRIPT</h2>
-        <ui>
-          <li>wip</li>
-        </ui>
+        <ul>
+          <li>A variable is a named container that allows us to store data in our code.</li>
+          <li>Define a variable: var myVariableNameHere = "StringValue, or really any value you want here." </li>
+          <li>Control flow is the order in which a computer executes code in a script.</li>
+          <li>You have to define what you want to alter/mess with before you alter/mess with it. (Control Flow)</li>
+          <li>Arrays are like variables, in that they are boxes that store things, but they store way more things.</li>
+          <li>Arrays are useful because you can grab/utilize the objects/things inside of it easy, as each value inside of it is assigned an integer. (Starting from 0 for the first, going up by 1, so 1 = the second array item)</li>
+          <li>You can loop through an array to find variables or mess with them. (Such as with using a "for loop")</li>
+          <li>Setting up a for loop example: (var x = 0; x < topics.length; x++) :First part defines the array you are going through and where its starting the count, next it checks for when the loop will stop, finally, it checks by what value it will count as it goes through the array. Default = 1.</li>
+          <li>Functions are kind of like variables, in that they store something, but in this case its an action that you'll define.</li>
+          <li>Create a function: function myFunctionNameHere() {the body/code of your function/what it does}</li>
+          <li>In order to use your function, you have to call it, for example: myFunctionNameHere() </li>
+          <li>If Then values are very useful to have in a function, because it can allow you to do more thna just one thing. It can allow you to check for other circumstances depending on what is truthy or falsy.</li>
+        </ul>
       </section>
 
       <section class="card" id="issues-section">
         <h2>Issues</h2>
-        <ui>
+        <ul>
           <li>Trying to make the border fully visible on all sides. <a href="https://www.youtube.com/watch?v=6RuzhtsbSIg" target="_blank">How to setup borders. (link)</a> <a href="https://www.w3schools.com/css/css_border.asp" target="_blank">w3schools Borders info (link)</a></li>
-          <li>Trying to have the style for the li inbetween each section the same, since for some reason the html section is doing its own thing.</li>
+          <li>Trying to have the style for the li inbetween each section the same, since for some reason the others sections (not html) are doing their own thing.
+            I figured it out! for the html one, I had it named properly as ul, as in u(lima), while all the others were ui as in u(indigo), Silly me!
+          </li>
           <li>How to have my changes in VS code appear instantly somewhere for easier testing/observing.</li>
           <li>How to add a grammar corrector to vs code to help with spelling mistakes.</li>
           <li>How to increase the padding within the border of the sections so that the list has some space from the border. </li>
           <li>Come back to this abomination and keep testing fun features on it. Name it "Frankstein Study Guide."!</li>
           <li>How to add css code to show up as plain text so I can use it in my notes. <a href=https://www.geeksforgeeks.org/html-entities/ target="_blank">How to show reserved symbols.</a> </li>
-        </ui>
+          <li>How to add comments in the code. ( Use /* (your comment here) */ )</li>
+        </ul>
       </section>
     </main>
 
@@ -96,7 +111,7 @@
 
       <p>Or can I?!</p>
 
-      <p> Hades was here. >:) </p>
+      <p> 🩸🪦💀👻Hades was here. >:)👻💀🪦🩸 </p>
     </footer>
     <script src="./assets/script.js"></script>
   </body>
